# rewalt

./: .gitignore  .readthedocs.yml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
docs/: api.rst  conf.py  index.rst  notebooks.rst  requirements.txt
docs/notebooks/: eckmannhilton.ipynb  monoids.ipynb  presentcategory.ipynb  simplicescubes.ipynb  stringdiagrams.ipynb  stringdiagrams_1.tex
docs/rewal/: diagrams.rst  drawing.rst  hasse.rst  ogposets.rst  shapes.rst  strdiags.rst
docs/rewalt/: diagrams.rst  drawing.rst  hasse.rst  ogposets.rst  shapes.rst  strdiags.rst
rewal/: __init__.py  diagrams.py  drawing.py  hasse.py  ogposet.py  ogposets.py  shapes.py  strdiags.py  utils.py
rewal/monoidal/: rewal2discopy.py
rewalt/: __init__.py  diagrams.py  drawing.py  hasse.py  ogposets.py  shapes.py  strdiags.py  utils.py
tests/: test_diagrams.py  test_ogposet.py  test_ogposets.py  test_shapes.py
