[metadata]
name = rewalt
version = 0.1.0
author = Amar Hadzihasanovic
author_email = ahadziha@users.noreply.github.com
description = A toolkit for higher-dimensional diagram rewriting.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://rewalt.readthedocs.io
download_url = https://pypi.org/project/rewalt
project_urls =
    Source Code = https://github.com/ahadziha/rewalt
keywords =
    category theory
    higher category theory
    rewriting
    string diagrams
    higher-dimensional rewriting
    homotopy theory
    combinatorial topology
    cell complexes
    diagram rewriting
    diagrammatic rewriting
    monoidal category
    prop
    operad
    multicategory
    simplicial set
    cubical set
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.7
    Natural Language :: English
    Topic :: Scientific/Engineering

[options]
packages = find:
python_requires = >=3.7
install_requires =
    numpy >= 1.18.1
    networkx >= 2.4
    matplotlib >= 3.1.2

[options.extras_require]
test =
    pytest
